Updated to the "Jay in Mexico" v2.0.
- New music
- Background images
- Improved game code

--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<meta name="keywords" content="Jay O'Brien 50 birthday">
-		<meta name="description" content="Happy 50th birthday, Jay O'Brien!">
-		<title>Are you ready?</title>
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+		<meta name="keywords" content="Suzie and Jay's roundup">
+		<meta name="description" content="Suzie and Jay's roundup">
+		<meta name="viewport" content="width=device-width, user-scalable=no">
+		<title>Suzie and Jay's roundup</title>
+		<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 		<link rel="stylesheet" type="text/css" href="css/jaystyle.css">
+	</head>
 
-		</head>
 	<body>
-	
-		<div>
-			<img src="img/pokemon_go_logo.png"/>
-			<p></p>
-			<a class="startplay" href="startgame.html"><h2>Start playing!</h2></a>
+		<div class="flex-container">
+			<div class="flex-item">Who can round up the family first?</div>
+			<div class="flex-item">
+				<a class="startplay" href="startgame.html" role="button" >Giddy-up!</a>
+			</div>
+			<div class="flex-pix">
+				<img src="img/roundup.jpg" class="make-it-fit" />
+			</div>
 		</div>
+		<noscript>Sorry, you need JavaScript to play!</noscript>
 	</body>
 </html>
